Fix dictionary look-up for highlighted text in Mac.

Currently, TextInputClientMac only taks to the main frames RenderWidgetHost in order to
obtian the string from specific range. This CL fixes this issue by routing the request
to the focused RenderWidgetHost.

BUG=651519

Review-Url: https://codereview.chromium.org/2382003002
Cr-Commit-Position: refs/heads/master@{#426030}

Former-commit-id: 3f7daa9733a4d5d3c06359b9f92c3bde20c7dd5d